--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-communications": "^2.2.1",
     "react-native-dash": "0.0.11",
     "react-native-device-info": "^5.5.3",
+    "react-native-store-version": "^1.3.1",
     "react-native-elements": "^1.2.7",
     "react-native-floating-action": "^1.20.0",
     "react-native-fs": "^2.16.6",
