--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@ xmlns:tools="http://schemas.android.com/tools"
       android:roundIcon="@drawable/ic_launcher"
       android:allowBackup="false"
       android:usesCleartextTraffic="true"   
+       android:requestLegacyExternalStorage="true"
       android:theme="@style/AppTheme">
        <meta-data
   android:name="com.google.android.geo.API_KEY"
