--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "react-native-communications": "^2.2.1",
     "react-native-dash": "0.0.11",
     "react-native-device-info": "^5.5.3",
-    "react-native-store-version": "^1.3.1",
     "react-native-elements": "^1.2.7",
     "react-native-floating-action": "^1.20.0",
     "react-native-fs": "^2.16.6",
+    "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^4.0.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-image-crop-picker": "^0.28.0",
@@ -66,6 +66,7 @@
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-splash-screen": "^3.2.0",
     "react-native-sqlite-storage": "^5.0.0",
+    "react-native-store-version": "^1.3.1",
     "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^6.6.0",
