--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-cards": "^1.1.4",
     "react-native-chart-kit": "^6.6.0",
     "react-native-charts-wrapper": "^0.5.7",
+    "react-native-check-box": "^2.1.7",
     "react-native-collapsible": "^1.5.3",
     "react-native-communications": "^2.2.1",
     "react-native-dash": "0.0.11",
