--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-native-store-version": "^1.3.1",
     "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-thumbnail-video": "^0.1.2",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.4.0",
     "react-navigation": "^4.2.2",
